try to fix error on mobile

--- a/style.css
+++ b/style.css
@@ -89,16 +89,22 @@ h2 {
     height: 100%;
     width: 100%;
     background: url(assets/img/header.png);
-    background-size: 180%;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     animation-fill-mode: forwards;
     /* animation: animBackground 1s; */
 }
 
-@media screen and (min-width: 600px) {
+@media only screen and (hover: none) and (pointer: coarse) {
     .header #background {
-        background-size: cover;
+        background-image: url(assets/img/header_mobile.png);
+    }
+    .container-title h1 {
+        margin-bottom: 10em;
+    }
+    .footer-links a {
+        font-size: 30px;
     }
 }
 
@@ -162,10 +168,6 @@ a {
     text-decoration: none;
     width: fit-content;
     color: #fff;
-}
-
-.footer-links a {
-    font-size: 15px;
 }
 
 .infos {
